--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "Cole Townsend <cole@coletownsend.com>",
   "license": "MIT",
   "dependencies": {
-    "next": "^1.2.3"
+    "next": "^1.2.3",
+    "react-redux": "^5.0.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "dev": "next"
