--- a/package.json
+++ b/package.json
@@ -7,11 +7,25 @@
   "author": "Cole Townsend <cole@coletownsend.com>",
   "license": "MIT",
   "dependencies": {
-    "next": "^1.2.3",
+    "cxs": "^3.0.4",
+    "dotenv": "^4.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^2.0.0-beta",
+    "ramda": "^0.23.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "dev": "next"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0"
   }
 }
