--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Cole Townsend <cole@coletownsend.com>",
   "license": "MIT",
   "dependencies": {
+    "@mars/heroku-nextjs-build": "^1.1.0",
     "cxs": "^3.0.4",
     "dotenv": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -18,8 +19,17 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "heroku-nextjs-build"
   },
+  "engines": {
+    "node": "6.9.x"
+  },
+  "cacheDirectories": [
+    "nextjs/node_modules"
+  ],
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
