--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   "license": "MIT",
   "dependencies": {
     "@mars/heroku-nextjs-build": "^1.1.0",
+    "bricks.js": "^1.7.0",
     "cxs": "^3.0.4",
     "dotenv": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.17.1",
     "next": "^2.0.0-beta",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-no-ssr": "^1.1.0",
     "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
