--- a/package.json
+++ b/package.json
@@ -2,37 +2,24 @@
   "name": "design-af",
   "version": "1.0.0",
   "description": "A design inspo feed",
-  "main": "index.js",
   "repository": "git@github.com:ColeTownsend/design-af.git",
   "author": "Cole Townsend <cole@coletownsend.com>",
   "license": "MIT",
   "dependencies": {
     "cxs": "^3.0.4",
-    "dotenv": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
     "next": "^2.0.0-beta",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-no-ssr": "^1.1.0",
-    "react-redux": "^5.0.2",
     "react-rnd": "^4.2.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "heroku-postbuild": "heroku-nextjs-build"
+    "start": "next start"
   },
-  "engines": {
-    "node": "6.9.x"
-  },
-  "cacheDirectories": [
-    "nextjs/node_modules"
-  ],
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
