--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-rnd": "^4.2.0",
-    "react-sketchapp": "^0.7.0"
+    "react-ga": "^2.1.2",
+    "react-rnd": "^4.2.0"
   },
   "scripts": {
     "dev": "next",
