--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "global": "^4.3.1",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
-    "next": "^2.0.0-beta",
+    "next": "^2.0.0",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
