--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "cxs": "^3.0.4",
+    "dotenv": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
-    "next": "^2.0.0",
+    "next": "^2.2.0",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
