--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "cxs": "^3.0.4",
     "dotenv": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "module-alias": "^2.0.0",
     "moment": "^2.17.1",
     "next": "^2.2.0",
+    "preact": "^8.1.0",
+    "preact-compat": "^3.15.0",
     "ramda": "^0.23.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "react-rnd": "^4.2.0"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "devDependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
